--- a/Zadacha/Zadacha/Views/Eqpm/Index.cshtml
+++ b/Zadacha/Zadacha/Views/Eqpm/Index.cshtml
@@ -26,7 +26,8 @@
                     @Html.DisplayFor(modelItem => item.name)
                 </td>
                 <td>
-                    <input type="button" value=EXPORT onclick="window.location='@Url.Action("Index", "Eqpm", new { criteria = item.equipmentType })'" />
+                    @*<input type="button" value=EXPORT onclick="window.location='@Url.Action("Index", "Eqpm", new { criteria = item.equipmentType })'" />*@ 
+                    <input type="button" value=EXPORT onclick="location.href='@Url.Action("CSV",new { GlobCrit = item.equipmentType })'" />
                 </td>
             </tr>
         }
